--- a/amcl/package.xml
+++ b/amcl/package.xml
@@ -31,6 +31,7 @@
     <build_depend>std_srvs</build_depend>
     <build_depend>tf</build_depend>
     <build_depend>robot_localizer</build_depend>
+    <build_depend>particle_filter_msgs</build_depend>
 
     <run_depend>rosbag</run_depend>
     <run_depend>roscpp</run_depend>
@@ -39,6 +40,7 @@
     <run_depend>nav_msgs</run_depend>
     <run_depend>std_srvs</run_depend>
     <run_depend>robot_localizer</run_depend>
+    <run_depend>particle_filter_msgs</run_depend>
 
     <test_depend>rostest</test_depend>
     <test_depend>map_server</test_depend>
